assets/scss/_variables.scss
$textFontFamily: 'DM Sans', sans-serif;
$logoFontFamily: 'Allerta Stencil', sans-serif;

$primary-color: #000000;
$accent-color: #a18a68;
$main-text-color: #707070;
$divider-color: #d8d8d8;
$gray-medium: #6c757d;
$white: #fff;
$btn-grey: #efefef;
$product-card-background: #f5f5f5;

$breakpoints-mobile: 856px;

$border-radius: 4px;
$transition: all 0.2s ease-in-out;

